resources/docs/2.0/events/simple-events.md
# Simple Events

In Eventmie Pro, you can create a single & multiple days event. Each event belongs to an organizer. Admin & Organizers can create events from the front-end.

---

![Simple event view](/images/v2/RepetitiveEventImages/events-repetitive-event-view.webp "Simple event view")

---

> {success} We'll discuss repetitive & online events and classes in the next sections. We'll focus on each option in their own section to avoid confusion.

---

> {primary} From here, we'll be guiding you through all the features of the front-end.

---

-   [Create Simple Event](#create-simple-event)
-   [Details <small class="v">v1.7</small>](#Details)
-   [Timing](#Timing)
-   [Tickets <small class="v">v2.0</small>](#Tickets)
-   [Location](#Location)
-   [Media](#Media)
-   [SEO](#SEO)
-   [Powered By](#powered-by)

<a name="create-simple-event"></a>

## Create Simple Event

Simple event here refers to single or multiple days event. Click on <larecipe-button type="primary" size="sm" rounded>Create Event</larecipe-button> to get started. 😤

<a name="Details"></a>

## Details <small class="v">v1.7</small>

The first step is mandatory to proceed to the next step. Add these details to proceed to the next steps-

-   Select Organiser (if logged in as Admin)
-   Category
-   Event name
-   Event excerpt (optional)
-   Event URL (auto-generated)
-   Description
-   Why to attend event? (optional)
-   Offline Payment Instructions (Instructions to show under **Offline Payment** Option) <small class="v">v1.7</small>

<br>

**(Only Admin can modify these two options)**

-   Event Featured (if logged in as Admin) (set Event as Featured)
-   Event Status (if logged in as Admin) (force Enable/Disable event)

---

![Event Detail Form](/images/v2/EventmieProEventCreationFile/events-simple-event-detail-new.webp "Event Detail Form")

---

<a name="Timing"></a>

## Timing

Set timing for single or multiple days event.

<br>

**Form Fields**

-   Start date
-   Start time
-   End date
-   End time

---

![Event Timing Form](/images/v2/EventmieProEventCreationFile/events-simple-event-timings.webp "Event Timing Form")

---

> {warning} Do not check the `Add Repetitive Schedules`, we'll discuss it in its own section.

---

<a name="Tickets"></a>

## Tickets <small class="v">v2.0</small>

Create tickets for the event.

-   Tickets can be `Free` or `Paid`.
-   Taxes can be applied to each ticket separately.
-   Multiple taxes can also be applied to each ticket.
-   Custom Ticket Order, to show the tickets on Checkout Page in your desired order/sequence.

<br>

**Form Fields**

-   Title
-   Price (set 0 for Free ticket)
-   Capacity (max bookings each ticket)
-   Booking Limit Per Customer (For how many times the same customer can purchase this ticket) <small class="v">v1.7</small>
-   Description (ticket amenities info) (optional)
-   Taxes (optional)
-   Order (set to 0 or 1 or 2 or 3, to show them in that order on checkout page) <small class="v">v2.0</small>

    ---

    ![Set custom Ticket order](/images/v2/1-ticket-order.webp "Set custom Ticket order")

    ---

    ![Show tickets on checkout page in custom order](/images/v2/2-ticket-order.webp "Show tickets on checkout page in custom order")

    ---


---

![Events free & paid tickets with taxes](/images/v2/EventmieProEventCreationFile/events-simple-event-ticket.webp "Events free & paid tickets with taxes")

---

<a name="Location"></a>

## Location

Event location details. You need to enter `Google map Lat-long` manually to show the venue pinned on the google map on the event page.

<br>

**Form Fields**

-   Venue
-   Google Map Lat (optional)
-   Google Map Long (optional)
-   Address (optional)
-   City (optional)
-   State (optional)
-   Zipcode (optional)
-   Country (optional)

---

![Events venue & google map location](/images/v2/EventmieProEventCreationFile/events-simple-event-location.webp "Events venue & google map location")

---

> {warning} Do not check the `Online Event`, we'll discuss it in its own section.

---

<a name="Media"></a>

## Media

Upload event poster, thumbnail, and images. Please upload the mentioned size of images. You can also crop and adjust them.

<br>

**Form Fields**

-   Thumbnail
-   Poster Image
-   Images Gallery (optional)
-   YouTube Video ID (optional)

---

> {success} Now you can manage Gallery images easily by adding or removing them one-by-one.

---

![Upload Event cover images & youtube video URL](/images/v2/EventmieProEventCreationFile/events-manage-gallery-images.webp "Upload Event cover images & youtube video URL")

---

<a name="SEO"></a>

## SEO

Write meta titles, keywords, and descriptions. These tags will be specific for each event, for event-specific SEO.

**Form Fields**

-   Meta Title (optional)
-   Meta Tags/Keywords (optional)
-   Meta Description (optional)

---

![Event seo](/images/v2/EventmieProEventCreationFile/events-simple-event-seo.webp "Event seo")

---

<a name="powered-by"></a>

## Powered By

Final step-

1. Select tags (optional).
2. Click &nbsp;<larecipe-button type="info" size="sm" rounded>Save</larecipe-button>
3. Then click &nbsp;<larecipe-button type="success" size="sm" rounded>Publish</larecipe-button>
4. You can `Un-publish` / `Publish` anytime.

---

> {primary} You can also create new Tags directly from Powered By Tab. We'll guide you about this in the Tags section.

---

![Event Tags & Publish](/images/v2/EventmieProEventCreationFile/events-simple-event-powered-by.webp "Event Tags & Publish")

---

> {success} see the `Published` event on listing page &nbsp;<larecipe-button type="secondary" size="sm" rounded>Browse Events</larecipe-button>

---

> {primary} Event can be `published` only after completing - `Details`, `Timings`, `Tickets`, `Location` & `Media`.

---


<iframe width="75%" height="500" src="https://www.youtube.com/embed/F8skElY3xAQ?si=aE2lTTinQFKusJfP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>

---